Added dark theme.

--- a/app/src/main/res/drawable/circle_blue.xml
+++ b/app/src/main/res/drawable/circle_blue.xml
@@ -4,5 +4,5 @@
     android:shape="oval">
 
     <solid
-        android:color="@color/color_main_blue"/>
+        android:color="@color/main_blue"/>
 </shape>
