--- a/app/src/main/res/drawable/circle_yellow.xml
+++ b/app/src/main/res/drawable/circle_yellow.xml
@@ -4,6 +4,6 @@
     android:shape="oval">
 
     <solid
-        android:color="@color/color_main_yellow"/>
+        android:color="@color/main_yellow"/>
 
 </shape>
