--- a/app/src/main/res/layout/activity_departure.xml
+++ b/app/src/main/res/layout/activity_departure.xml
@@ -10,7 +10,7 @@
         android:id="@+id/header"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="@android:color/white"
+        android:background="?backgroundViewColor"
         android:stateListAnimator="@animator/titlebar_elevaton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -35,10 +35,9 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
-                android:fontFamily="@font/roboto_bold"
                 android:text="BEŽIGRAD - GROSUPLJE"
-                android:textColor="@color/color_black"
                 android:textSize="24sp"
+                android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/include"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -48,10 +47,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="4dp"
-                android:fontFamily="@font/roboto_bold"
                 android:text="Navje"
-                android:textColor="@color/color_black"
                 android:textSize="18sp"
+                android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="@+id/departure_route_name"
                 app:layout_constraintTop_toBottomOf="@+id/departure_route_name" />
 
@@ -81,7 +79,7 @@
         android:id="@+id/departure_rv"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:background="@android:color/white"
+        android:background="?backgroundViewColor"
         android:paddingBottom="2dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
