--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -13,10 +13,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:alpha="0.7"
-        android:fontFamily="@font/segoe_ui"
         android:text="@string/app_name"
         android:textColor="@color/color_black"
-        android:textSize="38dp"
+        android:textSize="38sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.192"
         app:layout_constraintStart_toEndOf="@+id/tvw11"
@@ -28,10 +27,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
         android:alpha="0.5"
-        android:fontFamily="@font/segoe_ui"
         android:text="@string/app_slogan_welcome_activity"
         android:textColor="@color/color_black"
-        android:textSize="17dp"
+        android:textSize="17sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/textView_app_name"
@@ -43,11 +41,10 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:layout_marginBottom="10dp"
-        android:text="@string/by_developers"
-        android:textSize="12dp"
         android:alpha="0.5"
-        android:fontFamily="@font/segoe_ui"
+        android:text="@string/by_developers"
         android:textColor="@color/color_black"
+        android:textSize="12dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
