--- a/app/src/main/res/layout/fragment_stations_sub.xml
+++ b/app/src/main/res/layout/fragment_stations_sub.xml
@@ -6,4 +6,5 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     tools:context=".ui.fragments.subfragments.StationsSubFragment"
-    android:nestedScrollingEnabled="true"/>
+    android:nestedScrollingEnabled="true"
+    android:background="?backgroundViewColor"/>
