--- a/app/src/main/res/drawable/bus_pointer_circle.xml
+++ b/app/src/main/res/drawable/bus_pointer_circle.xml
@@ -5,7 +5,7 @@
 
     <solid android:color="@color/colorAccent" />
     <stroke android:width="1dp"
-        android:color="@color/color_black"/>
+        android:color="?android:textColor"/>
 
     <size
         android:width="8dp"
