--- a/app/src/main/res/drawable/circle_green.xml
+++ b/app/src/main/res/drawable/circle_green.xml
@@ -4,5 +4,5 @@
     android:shape="oval">
 
     <solid
-        android:color="@color/color_main_green"/>
+        android:color="@color/main_green"/>
 </shape>
