--- a/app/src/main/res/drawable/ic_swap_vert_black_24dp.xml
+++ b/app/src/main/res/drawable/ic_swap_vert_black_24dp.xml
@@ -4,8 +4,6 @@
         android:viewportWidth="24.0"
         android:viewportHeight="24.0">
     <path
-        android:fillColor="@color/colorAccent"
-        android:pathData="M12,2L4.5,20.29l0.71,0.71L12,18l6.79,3 0.71,-0.71z"
-        android:strokeColor="?android:textColor"
-        android:strokeWidth="1.0"/>
+        android:fillColor="#FF000000"
+        android:pathData="M16,17.01V10h-2v7.01h-3L15,21l4,-3.99h-3zM9,3L5,6.99h3V14h2V6.99h3L9,3z"/>
 </vector>
