--- a/app/src/main/res/drawable/layout_bg.xml
+++ b/app/src/main/res/drawable/layout_bg.xml
@@ -1,17 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <item>
-        <shape>
-            <solid android:color="#FFFFFF"/>
-            <padding android:left="0dp" android:top="0dp" android:right="0dp" android:bottom="0dp" />
-        </shape>
-    </item>
-    <item android:gravity="bottom">
-        <shape android:shape="line">
-            <stroke android:width="1dp" android:color="@android:color/darker_gray" />
-        </shape>
-    </item>
-
-
-</layer-list>
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
+    <solid android:color="#FFFFFF"/>
+    <padding android:left="0dp" android:top="0dp" android:right="0dp" android:bottom="0dp" />
+    <corners android:topRightRadius="30dp" android:topLeftRadius="30dp"/>
+</shape>
