--- a/app/src/main/res/drawable/station_circle.xml
+++ b/app/src/main/res/drawable/station_circle.xml
@@ -3,9 +3,9 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
 
-    <solid android:color="@android:color/white" />
+    <solid android:color="?backgroundViewColor" />
     <stroke android:width="1dp"
-        android:color="@color/color_black"/>
+        android:color="?android:textColor"/>
 
     <size
         android:width="8dp"
