--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,10 +23,12 @@
         android:layout_marginStart="12dp"
         android:layout_marginTop="12dp"
         android:background="@drawable/stretched_circle"
+        android:backgroundTint="?backgroundViewColor"
         android:elevation="6dp"
         android:padding="6dp"
         android:scaleType="fitCenter"
-        android:src="@drawable/ic_perm_identity_black_24dp"
+        android:src="@drawable/ic_settings_black_24dp"
+        android:tint="?android:textColor"
         android:translationZ="0dp" />
 
     <View
@@ -39,7 +41,7 @@
     <FrameLayout
         android:id="@+id/bottom_sheet"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         app:layout_behavior="@string/view_pager_bottom_sheet_behavior"
         app:behavior_hideable="false"
         app:behavior_peekHeight="150dp"
@@ -54,9 +56,11 @@
         android:layout_marginTop="12dp"
         android:layout_marginEnd="12dp"
         android:background="@drawable/stretched_circle"
+        android:backgroundTint="?backgroundViewColor"
         android:elevation="6dp"
         android:scaleType="center"
-        android:src="@drawable/ic_search_black_24dp" />
+        android:src="@drawable/ic_search_black_24dp"
+        android:tint="?android:textColor" />
 
 
 
