--- a/app/src/main/res/layout/activity_route.xml
+++ b/app/src/main/res/layout/activity_route.xml
@@ -26,17 +26,22 @@
         android:id="@+id/bottom_sheet"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_behavior="@string/view_pager_bottom_sheet_behavior"
+        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
         app:behavior_hideable="false"
-        app:behavior_peekHeight="150dp"
+        app:behavior_peekHeight="100dp"
         android:translationZ="2dp"
-        android:elevation="4dp" />
+        android:elevation="4dp"
+        android:background="@android:color/white">
+        <!--<androidx.recyclerview.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/> </!-->
+    </FrameLayout>
 
 
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@android:color/white"
+        android:background="?backgroundViewColor"
         android:elevation="6dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -51,10 +56,11 @@
                 android:layout_marginTop="12dp"
                 android:layout_marginBottom="12dp"
                 android:background="@drawable/stretched_circle"
-                android:backgroundTint="@android:color/white"
+                android:backgroundTint="?backgroundViewColor"
                 android:elevation="6dp"
                 android:scaleType="center"
                 android:src="@drawable/ic_arrow_back_black_24dp"
+                android:tint="?android:textColor"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -64,7 +70,7 @@
                 layout="@layout/template_route_number"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="24dp"
+                android:layout_marginStart="16dp"
                 app:layout_constraintBottom_toBottomOf="@+id/route_name"
                 app:layout_constraintStart_toEndOf="@+id/back"
                 app:layout_constraintTop_toTopOf="@+id/route_name" />
@@ -78,10 +84,9 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="16dp"
                 android:layout_marginBottom="8dp"
-                android:fontFamily="@font/roboto_bold"
                 android:text="BANANA"
-                android:textColor="@color/color_black"
                 android:textSize="22sp"
+                android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/route_circle"
