--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/color_main_background"
+    android:background="?backgroundViewColor"
     tools:context=".ui.activities.SignInActivity">
 
 
@@ -21,6 +21,7 @@
 
     </com.facebook.login.widget.LoginButton>
 
+
     <Button
         android:id="@+id/facebook_btn"
         android:layout_width="270dp"
@@ -29,25 +30,22 @@
 
         android:background="@drawable/facebook_button"
         android:drawableStart="@drawable/fb_btn_image"
-        android:fontFamily="@font/roboto_bold"
 
-        android:paddingStart="30dp"
-        android:paddingEnd="30dp"
+        android:paddingStart="30sp"
+        android:paddingEnd="15sp"
 
         android:stateListAnimator="@null"
         android:text="@string/sign_in_with_fb"
-
         android:textAllCaps="false"
+
         android:textColor="@color/color_facebook_button_white"
+
         android:textSize="16sp"
-
         android:textStyle="bold"
-
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintHorizontal_bias="0.489"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
 
     <Button
         android:id="@+id/google_btn"
@@ -58,15 +56,15 @@
 
         android:drawableStart="@drawable/google_btn_image"
 
-        android:fontFamily="@font/roboto_bold"
         android:paddingStart="30dp"
         android:paddingEnd="30dp"
         android:stateListAnimator="@null"
         android:text="@string/sign_in_with_google"
         android:textAllCaps="false"
 
-        android:textSize="16sp"
+        android:textColor="@color/color_black"
 
+        android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.517"
@@ -78,9 +76,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:fontFamily="@font/roboto_thin"
         android:text="@string/need_help"
-        android:textColor="@color/color_black"
         android:textSize="12sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.392"
@@ -95,7 +91,6 @@
         android:layout_marginTop="8dp"
         android:fontFamily="@font/roboto_bold"
         android:text="@string/contact_us"
-        android:textColor="@color/color_black"
         android:textSize="12sp"
         app:layout_constraintStart_toEndOf="@+id/textView4"
         app:layout_constraintTop_toBottomOf="@+id/google_btn" />
@@ -106,9 +101,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="208dp"
         android:alpha="0.7"
-        android:fontFamily="@font/roboto"
         android:text="@string/transport"
-        android:textColor="@color/color_black"
         android:textSize="33sp"
 
         app:layout_constraintEnd_toEndOf="parent"
@@ -121,9 +114,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:alpha="0.6"
-        android:fontFamily="@font/roboto"
         android:text="@string/the_way_it_was"
-        android:textColor="@color/color_black"
         android:textSize="23sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.459"
@@ -135,9 +126,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:alpha="0.5"
-        android:fontFamily="@font/roboto"
         android:text="@string/meant_to_be"
-        android:textColor="@color/color_black"
         android:textSize="19sp"
 
         app:layout_constraintEnd_toEndOf="parent"
@@ -503,7 +492,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
-        android:backgroundTint="@color/color_main_background"
+        android:backgroundTint="?backgroundViewColor"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_back_arrow" />
