--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -4,8 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/fragment_home_root"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@android:color/transparent"
+    android:layout_height="match_parent"
+    android:background="@drawable/layout_bg"
+    android:backgroundTint="?backgroundViewColor"
     tools:context=".ui.fragments.HomeFragment">
 
     <LinearLayout
@@ -14,14 +15,10 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
-        android:background="@drawable/stretched_circle"
-        android:backgroundTint="@color/color_facebook_button_white"
-        android:elevation="6dp"
+        android:background="?backgroundViewColor"
         android:orientation="horizontal"
         android:paddingTop="8dp"
         android:paddingBottom="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -34,7 +31,7 @@
             android:layout_marginEnd="8dp"
             android:layout_weight="1"
             android:background="@drawable/stretched_circle"
-            android:backgroundTint="@color/color_main_green"
+            android:backgroundTint="@color/main_green"
             android:clickable="true"
             android:focusable="true"
             android:padding="12dp"
@@ -49,7 +46,7 @@
             android:layout_marginEnd="8dp"
             android:layout_weight="1"
             android:background="@drawable/stretched_circle"
-            android:backgroundTint="@color/color_main_blue"
+            android:backgroundTint="@color/main_blue"
             android:clickable="true"
             android:focusable="true"
             android:padding="12dp"
@@ -79,7 +76,7 @@
             android:layout_marginEnd="8dp"
             android:layout_weight="1"
             android:background="@drawable/stretched_circle"
-            android:backgroundTint="@color/color_main_yellow"
+            android:backgroundTint="@color/main_yellow"
             android:clickable="true"
             android:focusable="true"
             android:padding="12dp"
