--- a/app/src/main/res/layout/fragment_routes_on_station.xml
+++ b/app/src/main/res/layout/fragment_routes_on_station.xml
@@ -4,4 +4,5 @@
     android:id="@+id/routes_on_station_rv"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="?attr/backgroundViewColor"
     tools:context=".ui.fragments.RoutesOnStationFragment" />
