--- a/app/src/main/res/layout/template_departure_hour.xml
+++ b/app/src/main/res/layout/template_departure_hour.xml
@@ -1,41 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/departure_container"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginStart="8dp"
-    android:layout_marginTop="2dp"
-    android:layout_marginEnd="8dp"
-    android:layout_marginBottom="2dp"
-    android:background="@drawable/stretched_circle"
-    android:elevation="2dp"
-    android:orientation="horizontal"
-    android:padding="8dp"
-    android:paddingStart="16dp"
-    android:paddingEnd="16dp">
+    android:background="@drawable/stretched_circle_container"
+    android:layout_marginStart="?containerBorderPaddingSide"
+    android:layout_marginTop="?containerBorderPadding"
+    android:layout_marginEnd="?containerBorderPaddingSide"
+    android:layout_marginBottom="?containerBorderPadding"
+    android:padding="2dp">
 
-    <TextView
-        android:id="@+id/departure_hour_hour"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/circle"
-        android:backgroundTint="@color/light_gray"
-        android:gravity="center"
-        android:padding="4dp"
-        android:text="15"
-        android:textAlignment="center"
-        android:textAllCaps="false"
-        android:textColor="@color/color_black"
-        android:textSize="18sp" />
-
-    <com.google.android.flexbox.FlexboxLayout
-        android:id="@+id/departure_hour_minutes"
+    <LinearLayout
+        android:id="@+id/departure_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="start|center_vertical"
         android:layout_marginStart="8dp"
-        app:alignItems="flex_start"
-        app:flexWrap="wrap" />
+        android:layout_marginTop="2dp"
+        android:layout_marginBottom="2dp"
+        android:layout_margin="?containerBorderMargin"
+        android:background="?containerBackground"
+        android:elevation="?elevation"
+        android:orientation="horizontal"
+        android:padding="8dp"
+        android:paddingStart="16dp"
+        android:paddingEnd="16dp">
 
-</LinearLayout>
+        <FrameLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/stretched_circle_container"
+            android:layout_marginStart="?containerBorderPaddingSide"
+            android:layout_marginTop="?containerBorderPadding"
+            android:layout_marginEnd="?containerBorderPaddingSide"
+            android:layout_marginBottom="?containerBorderPadding"
+            android:padding="2dp">
+            <TextView
+                android:id="@+id/departure_hour_hour"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/circle"
+                android:backgroundTint="@color/light_gray"
+                android:gravity="center"
+                android:padding="4dp"
+                android:text="15"
+                android:textAlignment="center"
+                android:textAllCaps="false"
+                android:textSize="18sp" />
+        </FrameLayout>
+
+        <com.google.android.flexbox.FlexboxLayout
+            android:id="@+id/departure_hour_minutes"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="start|center_vertical"
+            android:layout_marginStart="8dp"
+            app:alignItems="flex_start"
+            app:flexWrap="wrap" />
+
+    </LinearLayout>
+
+</FrameLayout>
