--- a/app/src/main/res/layout/template_live_arrival.xml
+++ b/app/src/main/res/layout/template_live_arrival.xml
@@ -27,10 +27,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="4dp"
-            android:fontFamily="@font/roboto_bold"
             android:text="Rudnik"
-            android:textColor="@android:color/black"
-            android:textSize="16sp" />
+            android:textColor="?android:textColor"
+            android:textSize="16sp"
+            android:textStyle="bold" />
     </LinearLayout>
 
     <com.google.android.flexbox.FlexboxLayout
