--- a/app/src/main/res/layout/template_route.xml
+++ b/app/src/main/res/layout/template_route.xml
@@ -28,11 +28,10 @@
             android:layout_gravity="center_horizontal|center_vertical"
             android:layout_marginStart="16dp"
             android:layout_weight="1"
-            android:fontFamily="@font/roboto_bold"
             android:text="BEŽIGRAD - GROSUPLJE"
-            android:textColor="@android:color/black" />
+            android:textStyle="bold" />
 
-        <Button
+        <ImageView
             android:id="@+id/route_departure_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -40,17 +39,16 @@
             android:layout_marginTop="4dp"
             android:layout_marginBottom="4dp"
             android:layout_weight="0"
-            android:background="@drawable/stretched_circle"
-            android:backgroundTint="@color/color_main_blue"
-            android:drawableStart="@drawable/ic_departure_board_24px"
+            android:background="@drawable/stretched_circle_container"
             android:minWidth="0dp"
             android:minHeight="0dp"
             android:padding="8dp"
             android:paddingStart="16dp"
             android:paddingEnd="16dp"
-            android:textColor="@android:color/white" />
+            android:src="@drawable/ic_departure_board_24px"
+            android:tint="?android:textColor" />
 
-        <Button
+        <ImageView
             android:id="@+id/route_map_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -58,15 +56,14 @@
             android:layout_marginTop="4dp"
             android:layout_marginBottom="4dp"
             android:layout_weight="0"
-            android:background="@drawable/stretched_circle"
-            android:backgroundTint="@color/color_main_green"
-            android:drawableStart="@drawable/ic_map_black_24dp"
+            android:background="@drawable/stretched_circle_container"
             android:minWidth="0dp"
             android:minHeight="0dp"
             android:padding="8dp"
             android:paddingStart="16dp"
             android:paddingEnd="16dp"
-            android:textColor="@android:color/white" />
+            android:src="@drawable/ic_map_black_24dp"
+            android:tint="?android:textColor" />
 
     </LinearLayout>
 
