--- a/app/src/main/res/layout/template_station_node.xml
+++ b/app/src/main/res/layout/template_station_node.xml
@@ -16,8 +16,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
-        android:fontFamily="@font/roboto_bold"
         android:text="Barje"
         android:textColor="@android:color/black"
-        android:textSize="18sp" />
+        android:textSize="18sp"
+        android:textStyle="bold" />
 </LinearLayout>
