--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -4,6 +4,7 @@
         <item>@font/actor</item>
         <item>@font/advent_pro_light</item>
         <item>@font/advent_pro_medium</item>
+        <item>@font/comfortaa</item>
         <item>@font/open_sans</item>
         <item>@font/open_sans_light</item>
         <item>@font/roboto</item>
